--- a/ForestClone/Base.lproj/Main.storyboard
+++ b/ForestClone/Base.lproj/Main.storyboard
@@ -356,6 +356,21 @@
             </objects>
             <point key="canvasLocation" x="4837.68115942029" y="822.99107142857144"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="udk-pv-rUq">
+            <objects>
+                <viewController id="6w5-FY-iHF" customClass="ViewController" customModule="ForestClone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="t1R-Kx-lcU">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="mH2-7w-A14"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9d0-LV-m3c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5743" y="761"/>
+        </scene>
         <!--Side Menu Navigation Controller-->
         <scene sceneID="qu5-rX-Vb1">
             <objects>
